css/main.css
body {
    background-image: url('../img/background.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    margin: 0;
    padding: 0;
    height: 100vh;
    width: 100vw;
    display: grid;
    place-items: center;
}

.container {
    position: relative;
    width: 800px;
    height: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.image{
    width: 100%;
    height: 100%;
    display: block;
}

#startButton{
    display: block;
    margin: 20px auto 0;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    background-color: #f10b0b;
    color: white;
    border: none;
    border-radius: 5px;
    transition: background-color 0.3s;
}

#startButton:hover{
    background-color: #e51919;
}

#board{
    display: none;
    position: relative;
    width: 800px;
    height: 600px;
    outline: 5px solid rgb(191, 182, 120);
    background-color: rgba(255, 255, 255, 0.7);
    overflow: hidden;
    margin: 0 auto;
}

.score{
    
    font-size: 24px;
    color: white;
    margin-top: 20px;
    text-align: center;
    position: relative;
}

#elaine{
   position: absolute;
}

#elaine img {
    height: 100%;
    width: 100%;
}

.obstacleSalad{
    position: absolute;
}

.obstacleSalad img{
    height: 100% ;
    width: 100%;
}

#george{
    position: absolute;
}

#george img{
    height: 100%;
    width: 100%;
}

